# JazLabs

./: .gitignore  LICENSE  pyproject.toml
examples/: example_analyse_calib_TT_data.py  example_calibration_scan_TT_atten.py  example_camera_continuous.py  example_camera_darkframes.py  example_camera_software-trigger.py  example_daq_voltage_control.py  test_tiptilt_with_scan.py
notebooks/: CameraExample.ipynb  CameraServerClientViewer.ipynb  FFTW_WISDOM496e74656c28522920436f726528544d292069372d383730304b20435055204020332e373047487a000000000000000000000000000000000000000000000000.txt  Init_Camera_digHolo_Switches_Stage.ipynb  LaserExample.ipynb  PLCharacterisation.ipynb  SLMExample.ipynb  SLMJitterTesting.ipynb  SLMSpeedTesting.ipynb  SLMWindowsLinuxServerExample.ipynb  digHoloConsole.txt
src/JazLabs/Simulator/libs/: CoupMatrixAndMetricAnalysisFuncitons.py  CoupMatrixAndMetricAnalysisFuncitons_old.py  MPLCFunctions.py  OpticalOperators.py  QuantumGateGenerator.py
src/JazLabs/hardware/Cameras/: Camera_Client.py  Camera_Server.py  Camera_Viewer.py  Camera_Widget.py
src/JazLabs/hardware/DAQ_Controller/: NI_DAQ.py  mcc_daq.py
src/JazLabs/hardware/MokuLab/: MokuLabObject.py
src/JazLabs/hardware/MotorisedStages/: MotorisedStage_Client.py  MotorisedStage_Server.py  (+1 more)
src/JazLabs/utils/: AlignmentFunctions.py  ArrayManipulators.py  GenerateSimplePhaseMasks.py  OPA_Calibration.py  SLM_CenterAlignment.py  SLM_MultiDimAlignment.py  SLM_TimeCalibration.py  ZernikeModule.py  camera_tools.py  camera_utils.py
src/pwi_inst.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+83 files in other folders)
