[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "JazLabs"
version = "0.1.0"
description = "JazLabs is a playgroud to build experiments and bring in new and different instruments together like JAZZ"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]